Complete logo section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Roboto:wght@100&family=Sono:wght@300&family=Urbanist&display=swap" rel="stylesheet">
 </head>
-<body>
-    This is a sign-up page
+<body class="grid-content">
+    <div class="banner">
+        <div class="logo">
+            <img src="chatGPT_logo.png" alt="chatGPT" width="100px">
+            <span>ChatGPT</span>
+        </div>
+        <div class="img-credit">Photo by <a href="https://unsplash.com/@phil_lev">Phil Lev</a> on <a href="https://unsplash.com/">Unsplash</a></div>
+    </div>
+    <div class="sign-up-content">Sign-up</div>
 </body>
 </html>
