--- a/index.html
+++ b/index.html
@@ -24,49 +24,46 @@
             <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
             <p>You <em>know</em> you want to.</p>
         </div>
-        <div class="form-container">
+        <form class="form-container" id="site_form" action="/" method="GET">
             <div class="form-content">
                 <p id="form-intro">Let's do this!</p>
-                <form action="/" method="GET">
-                    <fieldset>
-                        <div>
-                            <label for="fname">FIRST NAME</label><br>
-                            <input type="text" name="fname" id="fname" required>
-                        </div>
-                        <div>
-                            <label for="lname">LAST NAME</label><br>
-                            <input type="text" name="lname" id="lname" required>
-                        </div>
-                    </fieldset>
-                    <fieldset>
-                       <div>
-                           <label for="email">EMAIL</label><br>
-                           <input type="email" name="email" id="email" required>
-                       </div>
-                       <div>
-                           <label for="phone">PHONE NUMBER</label><br>
-                           <input type="number" id="phone" name="phone" required>
-                       </div>
-                    </fieldset>
-                    <fieldset>
-                        <div>
-                            <label for="password">PASSWORD</label><br>
-                            <input class="error" type="password" id="password" name="password" required>
-                        </div>
-                        <div id="confirm_pw_container">
-                            <label for="confirm_password">CONFIRM PASSWORD</label><br>
-                            <input class="error" type="password" name="confirm_password" id="confirm_password" required>
-                            <div id="password_match_container">Passwords do not match</div>
-                        </div>
-                    </fieldset>
-                </form>
+                <fieldset>
+                    <div>
+                        <label for="fname">FIRST NAME</label><br>
+                        <input type="text" name="fname" id="fname" required>
+                    </div>
+                    <div>
+                        <label for="lname">LAST NAME</label><br>
+                        <input type="text" name="lname" id="lname" required>
+                    </div>
+                </fieldset>
+                <fieldset>
+                   <div>
+                       <label for="email">EMAIL</label><br>
+                       <input type="email" name="email" id="email" required>
+                   </div>
+                   <div>
+                       <label for="phone">PHONE NUMBER</label><br>
+                       <input type="number" id="phone" name="phone" required>
+                   </div>
+                </fieldset>
+                <fieldset>
+                    <div>
+                        <label for="password">PASSWORD</label><br>
+                        <input class="error" type="password" id="password" name="password" required>
+                    </div>
+                    <div id="confirm_pw_container">
+                        <label for="confirm_password">CONFIRM PASSWORD</label><br>
+                        <input class="error" type="password" name="confirm_password" id="confirm_password" required>
+                        <div id="password_match_container">Passwords do not match</div>
+                    </div>
+                </fieldset>
             </div>
             <div class="submit-form">
                 <button type="submit" id="submit">Create Account</button>
                 <p>Already have an account? <a href="/">Log in</a></p>
             </div>
-        </div>
-        
+        </form>    
     </div>
 </body>
 </html>
