Add pattern to number input

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                    </div>
                    <div>
                        <label for="phone">PHONE NUMBER</label><br>
-                       <input type="number" id="phone" name="phone" required>
+                       <input type="text" id="phone" name="phone" pattern="^\d{10}$" title='Must be a 10 digit number'required>
                    </div>
                 </fieldset>
                 <fieldset>
